<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

    <include
            android:id="@+id/appbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <TextView
            android:id="@+id/welcome_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar"/>

    <Button
            android:id="@+id/about_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_alc"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="64dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/welcome_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:id="@+id/profile_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="24dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/about_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>