<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">

    <include
            android:id="@+id/appbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintBottom_toBottomOf="parent">


        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/banner"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <View
                        android:id="@+id/profileImageView"
                        android:layout_width="0dp"
                        android:layout_height="250dp"
                        android:background="@color/colorPrimary"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <com.alc1.util.RoundedCornerImage
                        android:id="@+id/profileImage"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/me"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/profileImageView"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:layout_margin="8dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white"
                        app:layout_constraintTop_toBottomOf="@id/profileImage"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                <ImageView
                        android:id="@+id/countryFlag"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/nigeria"
                        android:layout_marginLeft="16dp"
                        app:layout_constraintTop_toTopOf="@id/name"
                        app:layout_constraintBottom_toBottomOf="@id/name"
                        app:layout_constraintLeft_toRightOf="@id/name"/>
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/bottom"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/track"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/track"
                        android:drawablePadding="16dp"
                        android:layout_margin="16dp"
                        app:layout_constraintRight_toLeftOf="@id/androidIcon"
                        app:layout_constraintBottom_toTopOf="@id/email"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:drawableLeft="@drawable/ic_track_changes_24px"
                        android:textAppearance="?android:textAppearanceMedium"
                        app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                        android:id="@+id/androidIcon"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ic_android_24px"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintTop_toTopOf="@id/track"
                        app:layout_constraintBottom_toBottomOf="@id/track"
                        app:layout_constraintLeft_toRightOf="@id/track"/>

                <TextView
                        android:id="@+id/email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:drawablePadding="16dp"
                        android:layout_margin="16dp"
                        app:layout_constraintBottom_toTopOf="@id/phone"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:drawableLeft="@drawable/ic_mail_outline_24px"
                        android:textAppearance="?android:textAppearanceMedium"
                        app:layout_constraintTop_toBottomOf="@id/track"/>

                <TextView
                        android:id="@+id/phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:drawablePadding="16dp"
                        android:layout_margin="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/slack"
                        app:layout_constraintRight_toRightOf="parent"
                        android:drawableLeft="@drawable/ic_phone_24px"
                        android:textAppearance="?android:textAppearanceMedium"
                        app:layout_constraintTop_toBottomOf="@id/email"/>

                <TextView
                        android:id="@+id/slack"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/slack"
                        android:drawablePadding="16dp"
                        android:layout_margin="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:drawableLeft="@drawable/slack"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textAppearance="?android:textAppearanceMedium"
                        app:layout_constraintTop_toBottomOf="@id/phone"/>


            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>